# haskell-bazel-nixpkgs

./: .bazelrc  .envrc  .gitignore  .hie-bios  BUILD.bazel  README.md  WORKSPACE  alacritty.yml  hie.yaml  shell.nix  snapshot.yaml
nix/: Another.java  BUILD  default.nix  sources.json
package/TestLib/: BUILD
package/TestLib/src/: TestLib.hs
package/haskell-basic-lib/: BUILD
package/haskell-basic-lib/src/: Example.hs
package/java-lib/src/main/java/: Lib.java
